# arithmetic-operator

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp
bit_operator/: bit_operator.c  bit_operator.h
bitwise_and_mod/: non_linear_bin_op.cpp
fixed_point_operator/: fixed_point_operator.c  fixed_point_operator.cpp  fixed_point_operator.h  gtest.cpp
soft_float_operator/: gtest.cpp  soft_float_operator.c  soft_float_operator.cpp
soft_float_operator/include/: soft_float.h
soft_float_operator/util/: union_test.cpp
